--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       - "3306:3306"
   admin:
     image: phpmyadmin
+    depends_on:
+      - db
     restart: always
     environment:
       - PMA_ARBITRARY=1
